[project]
name = "video-creator"
version = "2.0.1"
description = "AI video content creation extension for Imperal Cloud"
requires-python = ">=3.11"
dependencies = [
    "imperal-sdk>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
